--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,12 +4,8 @@
 # #######################################################################################
 
 
-# This is an example Hyprland config file.
 # Refer to the wiki for more information.
 # https://wiki.hypr.land/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
 
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
@@ -23,7 +19,6 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,automode
 monitor=DP-1,preferred,auto,1.2
-
 
 ###################
 ### MY PROGRAMS ###
@@ -49,9 +44,9 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = waybar
-exec-once = hyprpaper
-exec-once = dunst
+exec-once = uwsm app -- waybar
+exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- dunst
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -246,15 +241,15 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, Q, exec, uwsm app -- $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, F, exec, firefox
-bind = $mainMod, S, exec, steam
+bind = $mainMod, F, exec, uwsm app -- firefox
+bind = $mainMod, S, exec, uwsm app -- steam
 bind = , PRINT, exec, hyprshot -m window
 bind = shift, PRINT, exec, hyprshot -m region 
 bind = $SUPER_SHIFT, l ,exec, hyprlock
